Opened 15 years ago
Closed 15 years ago
#6458 closed bug (fixed)
BTextView crashes while typing Japanese text.
Reported by: | mt | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/alpha2 |
Keywords: | BTextView | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Attachments (3)
Change History (6)
by , 15 years ago
Attachment: | r38006.png added |
---|
comment:1 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Can you try with hrev38034 or newer? At least this seems to be the last related change.
Note:
See TracTickets
for help on using tickets.
hrev38006 StyledEdit screenshot.