Fix #6458 - crash in BTextView when entering Japanese characters * when I changed InsertText() to adjust the caret position recently, I   forgot to drop that adjustment from all callers - _HandleInputMethodChanged()   was still doing it, leading to out of bounds access

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38243 a95241bf-73f2-0310-859d-f6bbb57e9c96